--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /*GENERAL STYLE*/
 
 body {
-    font-family: 'Open Sans', serif;
+    font-family: 'Open Sans';
     padding-top: 54px;
     color: #868e96;
 }
@@ -20,7 +20,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Saira Extra Condensed', serif;
+    font-family: 'Saira Extra Condensed';
     font-weight: 700;
     text-transform: uppercase;
     color: #343a40;
