--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ a:active {
 .subheading {
     text-transform: uppercase;
     font-weight: 500;
-    font-family: 'Saira Extra Condensed', serif;
+    font-family: 'Saira Extra Condensed';
     font-size: 1.35rem;
 }
 
