--- a/css/style.css
+++ b/css/style.css
@@ -415,13 +415,15 @@ a:active {
   font-size: 35px;
   margin-bottom: 40px;
 }
-
-.skill-item {
-    padding: 20px 0;
-    margin-bottom: 30px;
+.skill-item {                       /*########################복사*/
+    padding: 20px 0px;
+    margin-bottom: 50px;
     background: rgba(144, 144, 144, 0.78);
+    padding-left: -10px -0px;
+    margin-left: 150px;
+    margin-right :10%;
+    width: 250px;
 }
-
 .skill-item i {
     color: #2196f3;
 }
