--- a/css/style.css
+++ b/css/style.css
@@ -239,28 +239,34 @@ a:active {
 ======================================================*/
 
 #portfolio{
-    padding:100px 0;
+    padding:100px 100;
+} 
+
+#portfolio p{
+    text-align: center;
+    padding: 1%;
 } 
 
 .port-head-cont{
-    margin:20px auto 40px auto;
+    margin:20px auto 100px auto;
     text-align: center;
 }
 
 .port-head-cont button{
-    margin:5px 2px;
+    margin: 5px 2px;
 }
 
 #portfolio .portfolio-item {
-    right: 0;
-    margin: 0 0 15px;
+    right: 7px;
+    display: flex;
+    margin: 10px 0 8px;
 }
 
 #portfolio .portfolio-item .portfolio-link {
     position: relative;
-    display: block;
-    max-width: 400px;
-    margin: 0 auto;
+    display: grid;
+    max-width: 450px;
+    margin: 100 auto;
     cursor: pointer;
 }
 
@@ -271,20 +277,20 @@ a:active {
     -webkit-transition: all ease 0.5s;
     -moz-transition: all ease 0.5s;
     transition: all ease 0.5s;
-    opacity: 0;
+    opacity: 0  ;
     background: rgba(54, 160, 245, 0.73);
 }
 
 #portfolio .portfolio-item .portfolio-link .caption-port:hover {
     opacity: 1;
 }
-
+/* 캡션크기 */
 #portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content {
     font-size: 20px;
-    position: absolute;
+    position: relative;
     top: 50%;
     width: 100%;
-    height: 20px;
+    height: 30px;
     margin-top: -12px;
     text-align: center;
     color: white;
@@ -296,16 +302,16 @@ a:active {
 
 #portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content h3,
 #portfolio .portfolio-item .portfolio-link .caption-port .caption-port-content h4 {
-    margin: 0;
+    margin: 10px;
 }
 
 #portfolio * {
     z-index: 2;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 1500px) {
     #portfolio .portfolio-item {
-        margin: 0 0 30px;
+        margin: 0 0 60px;
     }
 }
 
@@ -346,7 +352,7 @@ a:active {
 }
  
 .portfolio-modal .close-modal {
-    position: absolute;
+    position: relative;
     top: 25px;
     right: 25px;
     width: 75px;
