--- a/css/style.css
+++ b/css/style.css
@@ -466,7 +466,7 @@ a:active {
 ======================================================*/
  
 #awards {
-    background: #f0f0f0;
+    background: #000000;
 
 }
 
