--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ a:active {
   }
 
   .bg-primary {
-      background-color: #2196f3 !important;
+     background-color: #776A77!important;
   }
 
   .text-primary {
