--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ a:active {
   }
 
   .text-primary {
-      color: #2196f3 !important;
+     color:#776A77!important;
   }
 
 /*==================================================
