--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ a:active {
           display: flex;
           flex-direction: column;
           width: 17rem;
-          background-color: #776A77;
+          background-color: #ffffff;
           height: 100vh;
       }
       #sideNav .navbar-brand {
