--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ a:active {
   .heading-border {
       width: 60px;
       height: 10px;
-      background-color: #2196f3;
+      background-color: #776A77;
       margin: 0 auto 20px auto;
   }
 
