--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ a:active {
       #sideNav .navbar-brand .img-profile {
           max-width: 10rem;
           max-height: 10rem;
-          border: 0.5rem solid rgba(255, 255, 255, 0.2);
+          border: 0.5rem solid #ffffff;
       }
       #sideNav .navbar-collapse {
           display: flex;
