--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h6 {
     font-family: 'Saira Extra Condensed';
     font-weight: 700;
     text-transform: uppercase;
-   color: #343a40;
+   color: #444;
 }
 
 h1 {
