--- a/css/style.css
+++ b/css/style.css
@@ -662,7 +662,7 @@ a:active {
     display: block;
     font-size: 15px;
     font-weight: 600;
-    color: #39b3ff;
+    color: #444;
     margin: 0 0 8px;
     transition: all 0.3s ease 0s;
 }
