--- a/css/style.css
+++ b/css/style.css
@@ -265,10 +265,11 @@ a:active {
     margin: 10px 0 8px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+
+#portfolio .portfolio-item .portfolio-link {                    
     position: relative;
-    display: grid;
-    max-width: 450px;
+    display: block;
+    max-width: 900px;
     margin: 100 auto;
     cursor: pointer;
 }
